added contact forms, migrated from nginx to caddy
